leaderBoard completed for two player.